# kern

./: .fix-and-features.md  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md  SECURITY.md  _plan.md  _task.md  build_release.sh  deny.toml  design.md  flake.nix  install.ps1  install.sh  kern_type.md  main.kr  plan.md  task.md  test1.kn  test10.kn  test11.kn  test2.kn  test3.kn  test4.kn  test5.kn  test6.kn  test7.kn  test8  test8.kn  todo.md
compiler/kernc_cli/: Cargo.toml
compiler/kernc_cli/src/: help.rs  lib.rs  main.rs  test_support.rs
compiler/kernc_cli/tests/: README.md  anonymous_aggregates.rs  atomics.rs  collections.rs  destructuring.rs  fat_pointer_return.rs  filesystem.rs  let_else.rs  propagate.rs  regressions.rs  simd.rs  soundness.rs  stdlib.rs  traits.rs
compiler/kernc_cli/tests/collections/: map.rs  seq.rs  tree.rs
compiler/kernc_cli/tests/filesystem/: dirs.rs  io.rs  paths.rs
compiler/kernc_cli/tests/regressions/: early.rs  language.rs  match_exhaustiveness.rs  mutability.rs  packages.rs  paterson.rs  supertraits.rs
compiler/kernc_cli/tests/regressions/language/: const_generics.rs  core.rs  initialization.rs  robustness.rs  runtime.rs  trait_solver.rs
compiler/kernc_cli/tests/simd/: core.rs  diagnostics.rs  ir.rs  memory.rs
compiler/kernc_cli/tests/soundness/: README.md
compiler/kernc_cli/tests/stdlib/: alloc.rs  bundle.rs  num.rs  runtime.rs  support.rs
compiler/kernc_cli/tests/support/: mod.rs
compiler/kernc_codegen/: Cargo.toml  build.rs
compiler/kernc_codegen/src/: codegen.rs  lib.rs  llvm_api.rs  llvm_facade.rs  thinlto.rs  thinlto_bridge.cpp
compiler/kernc_codegen/src/codegen/: abi.rs  aggregate.rs  alloca.rs  block.rs  debug_info.rs  decl.rs  emit.rs  ice.rs  math.rs  refs.rs  simd_shared.rs  types.rs
compiler/kernc_codegen/src/codegen/expr/: access.rs  call.rs  cast.rs  control.rs  literal.rs  mod.rs  ops.rs
compiler/kernc_codegen/src/codegen/mir/: atomic.rs  control.rs  mod.rs  place.rs  rvalue.rs  simd_memory.rs  simd_ops.rs  validate.rs
compiler/kernc_codegen/src/llvm/: block.rs  decl.rs  mod.rs  types.rs
compiler/kernc_codegen/src/llvm/expr/: access.rs  call.rs  cast.rs  control.rs  literal.rs  mod.rs  ops.rs
compiler/kernc_codegen/src/llvm_api/: base.rs  builder.rs  context.rs  debug.rs  mod.rs  module.rs
compiler/kernc_driver/: Cargo.toml  README.md
compiler/kernc_driver/src/: compiler.rs  doc.rs  frontend.rs  language.rs  lib.rs  loader.rs  metadata.rs
compiler/kernc_driver/src/compiler/: analysis.rs  codegen_units.rs  completion.rs  flow.rs  link.rs  pipeline.rs  signature.rs  tests.rs  type_hints.rs
compiler/kernc_lower/: Cargo.toml  README.md
compiler/kernc_lower/src/: inline.rs  lib.rs  mono.rs  vtable.rs
compiler/kernc_lower/src/expr/: access.rs  call.rs  cast.rs  control.rs  literal.rs  mod.rs  ops.rs
compiler/kernc_mast/: Cargo.toml  README.md
compiler/kernc_mast/src/: expr.rs  item.rs  lib.rs  stmt.rs
compiler/kernc_mir/: Cargo.toml  README.md
compiler/kernc_mir/src/: ids.rs  ir.rs  lib.rs  stats.rs  summary.rs  tests.rs
compiler/kernc_mir/src/pass/: cfg.rs  mod.rs
compiler/kernc_mir/src/verify/: mod.rs  refs.rs  rvalue.rs
compiler/kernc_mir_lower/: Cargo.toml  README.md
compiler/kernc_mir_lower/src/: builder.rs  lib.rs  tests.rs
compiler/kernc_mir_lower/src/builder/: control.rs  expr.rs  mod.rs  static_init.rs
compiler/kernc_mir_lower/src/tests/: builder_data.rs  builder_flow.rs  builder_scalar.rs  builder_simd.rs  mod.rs  pipeline.rs
compiler/kernc_sema/: Cargo.toml
compiler/kernc_sema/src/: builtin.rs  context.rs  def.rs  lib.rs  query.rs  scope.rs  semantic.rs
compiler/kernc_sema/src/builtin/: custom.rs  impls.rs  intrinsics.rs  mod.rs  traits.rs
compiler/kernc_sema/src/checker/: constexpr.rs  mod.rs  subst.rs
compiler/kernc_sema/src/context/: impl_requirements.rs  ownership.rs  projection_normalization.rs  semantic_index.rs  snapshot.rs  state.rs  symbol_mangling.rs
compiler/kernc_sema/src/passes/: collect.rs  imports.rs  linkage.rs  mod.rs  prune.rs  types.rs
compiler/kernc_sema/src/query/: methods.rs  mod.rs  module.rs  named.rs  projection.rs
compiler/kernc_sema/src/ty/: format.rs  layout.rs  mod.rs  registry.rs  subst.rs
shared/cli/: Cargo.toml
shared/cli/src/: lib.rs
shared/ops/: Cargo.toml
shared/ops/src/: lib.rs
tools/craft/: Cargo.toml  README.md
tools/craft/sdk/: builder.kn  builder.rn  plan.kn  plan.rn
tools/craft/src/: analysis_context.rs  build_plan.rs  build_state.rs  cli.rs  discover.rs  doc.rs  elaborate.rs  error.rs  execute.rs  fmt.rs  graph.rs  lib.rs  local_state.rs  lockfile.rs  main.rs  manifest.rs  operation_lock.rs  plan.rs  project.rs  publish.rs  publish_proof.rs  resolver.rs  script.rs  sdk.rs  source.rs  style.rs  target_defaults.rs  test_support.rs  workspace.rs
tools/craft/src/analysis_context/: parse.rs  render.rs  tests.rs  validate.rs
tools/craft/src/build_plan/: actions.rs  derive_support.rs  paths.rs  tests.rs
tools/craft/src/cli/: commands.rs  help.rs  policy.rs  render.rs  tests.rs
tools/craft/src/execute/: external.rs  fingerprint.rs  options.rs  orchestrate.rs  parallel.rs  progress.rs  runtime.rs  runtime_packages.rs  staging.rs  tests.rs
tools/craft/src/lockfile/: build.rs  parse.rs  render.rs  validate.rs
tools/craft/src/manifest/: parse.rs  tests.rs  validate.rs
tools/craft/src/project/: packages.rs  paths.rs  tests.rs
tools/craft/src/script/: analysis.rs  build_host.rs
tools/craft/tests/: workspace_concurrency.rs
tools/kernup/: Cargo.toml
tools/kernup/src/: main.rs
tools/lsp/: Cargo.toml  README.md
tools/lsp/src/: analysis.rs  defaults.rs  help.rs  main.rs  protocol.rs  server.rs  transport.rs
tools/lsp/src/analysis/: cache.rs  code_actions.rs  completion.rs  diagnostics.rs  documents.rs  formatting.rs  ide.rs  navigation.rs  queries.rs  semantic.rs  structure.rs  tests.rs  text.rs
tools/lsp/src/server/: configuration.rs  dispatch.rs  lifecycle.rs  scheduler.rs  state.rs  tests.rs
tools/lsp/src/server/tests/: basics.rs  (+5 more)
(+834 files in other folders)
