[workspace]
resolver = "3"

members = [
    "compiler/*",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["softfault <givenyoung46@gmail.com>"]
license = "MIT" 

[workspace.dependencies]

# kernc
kernc_utils = { path = "compiler/kernc_utils" }
kernc_lexer = { path = "compiler/kernc_lexer" }
kernc_ast = { path = "compiler/kernc_ast" }
kernc_parser = { path = "compiler/kernc_parser" }
kernc_sema = { path = "compiler/kernc_sema" }
kernc_mast = { path = "compiler/kernc_mast" }
kernc_lower = { path = "compiler/kernc_lower" }
kernc_codegen = { path = "compiler/kernc_codegen" }
kernc_driver = { path = "compiler/kernc_driver" }

# deps
inkwell = { version = "0.8.0", default-features = false, features = [
    "llvm21-1",
    "target-x86",       
    "target-aarch64",  
    "target-riscv",     
    "target-arm",
    "target-webassembly"
] }
target-lexicon = "0.13.5"
