[workspace]
resolver = "3"

members = [
    "compiler/*",
    "tools/*",
]

[workspace.package]
version = "0.6.3"
edition = "2024"
authors = ["softfault <givenyoung46@gmail.com>"]
license = "MIT" 

[workspace.dependencies]

# kernc
kernc_utils = { path = "compiler/kernc_utils" }
kernc_lexer = { path = "compiler/kernc_lexer" }
kernc_ast = { path = "compiler/kernc_ast" }
kernc_parser = { path = "compiler/kernc_parser" }
kernc_sema = { path = "compiler/kernc_sema" }
kernc_mast = { path = "compiler/kernc_mast" }
kernc_lower = { path = "compiler/kernc_lower" }
kernc_codegen = { path = "compiler/kernc_codegen" }
kernc_driver = { path = "compiler/kernc_driver" }

# deps
llvm-sys = "211.0.0"
target-lexicon = "0.13.5"
