[workspace]
resolver = "3"

members = [
    "compiler/*",
    "shared/*",
    "tools/*",
]

[workspace.package]
version = "0.7.2"
edition = "2024"
authors = ["softfault <givenyoung46@gmail.com>"]
license = "MIT"

[workspace.dependencies]

# kernc
kernc_db = { path = "compiler/kernc_db" }
kernc_utils = { path = "compiler/kernc_utils" }
kernc_lexer = { path = "compiler/kernc_lexer" }
kernc_ast = { path = "compiler/kernc_ast" }
kernc_parser = { path = "compiler/kernc_parser" }
kernc_sema = { path = "compiler/kernc_sema" }
kernc_flow = { path = "compiler/kernc_flow" }
kernc_mono = { path = "compiler/kernc_mono" }
kernc_mast = { path = "compiler/kernc_mast" }
kernc_mir = { path = "compiler/kernc_mir" }
kernc_mir_lower = { path = "compiler/kernc_mir_lower" }
kernc_lower = { path = "compiler/kernc_lower" }
kernc_codegen = { path = "compiler/kernc_codegen" }
kernc_driver = { path = "compiler/kernc_driver" }
shared_cli = { path = "shared/cli" }

# deps
llvm-sys = "211.0.0"
target-lexicon = "0.13.5"
