[package]
name = "kernc_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"

[[bin]]
name = "kernc"        
path = "src/main.rs"

[dependencies]
kernc_utils = { workspace = true }
kernc_driver = { workspace = true }
shared_cli = { workspace = true }
