[package]
name = "kernc_codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
llvm-sys = { workspace = true }
kernc_utils = { workspace = true }
kernc_ast = { workspace = true }
kernc_mono = { workspace = true }
kernc_sema = { workspace = true }
kernc_mir = { workspace = true }
target-lexicon = { workspace = true }

[build-dependencies]
cc = "1.2"
llvm-sys = { workspace = true }
