[package]
name = "kernc_driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

[lib]
doctest = false

[dependencies]
kernc_db = { workspace = true }
kernc_utils = { workspace = true }
kernc_ast = { workspace = true }
kernc_parser = { workspace = true }
kernc_sema = { workspace = true }
kernc_codegen = { workspace = true }
kernc_lower = { workspace = true }
kernc_mast = { workspace = true }
