[package]
name = "kernc_driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"
readme = "README.md"

[lib]
doctest = false

[dependencies]
kernc_db = { workspace = true }
kernc_utils = { workspace = true }
kernc_ast = { workspace = true }
kernc_flow = { workspace = true }
kernc_mono = { workspace = true }
kernc_parser = { workspace = true }
kernc_sema = { workspace = true }
kernc_codegen = { workspace = true }
kernc_lower = { workspace = true }
kernc_mast = { workspace = true }
kernc_mir = { workspace = true }
kernc_mir_lower = { workspace = true }
