[package]
name = "kernc_lower"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
kernc_flow = { workspace = true }
kernc_mono = { workspace = true }
kernc_utils = { workspace = true }
kernc_ast = { workspace = true }
kernc_sema = { workspace = true }
kernc_mast = { workspace = true }
