[package]
name = "kernc_mast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
kernc_mono = { workspace = true }
kernc_utils = { workspace = true }
kernc_ast = { workspace = true }
kernc_sema = { workspace = true }
