[package]
name = "kernc_mir_lower"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
kernc_ast = { workspace = true }
kernc_mast = { workspace = true }
kernc_mir = { workspace = true }
kernc_mono = { workspace = true }
kernc_sema = { workspace = true }
kernc_utils = { workspace = true }
