[package]
name = "kernc_sema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
kernc_utils = { workspace = true }
kernc_ast = { workspace = true }
kernc_parser = { workspace = true }
kernc_ty = { workspace = true }
kernc_middle = { workspace = true }
