[package]
name = "kern-shared-ops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared SDK installation, archive, and release operations for Kern tooling."
repository = "https://github.com/kern-project/kern"
homepage = "https://github.com/kern-project/kern"
keywords = ["kern", "sdk", "toolchain"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
