[package]
name = "craft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kernc_driver = { workspace = true }
kernc_sema = { workspace = true }
kernc_utils = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console"] }
