[package]
name = "craft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
kernc_driver = { workspace = true }
kernc_sema = { workspace = true }
kernc_utils = { workspace = true }
shared_cli = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console"] }
