[package]
name = "kern-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"

[dependencies]
craft = { path = "../craft" }
kernc_driver = { workspace = true }
kernc_lexer = { workspace = true }
kernc_parser = { workspace = true }
kernc_utils = { workspace = true }
shared_cli = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
